# moodlight

./: .gitignore  README.md
android/: settings.gradle
android/app/: build.gradle
android/app/src/androidTest/java/live/ditto/moodlight/: ExampleInstrumentedTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/live/ditto/moodlight/: MainActivity.kt
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/main/res/values-night/: themes.xml
android/app/src/test/java/live/ditto/moodlight/: ExampleUnitTest.kt
android/gradle/wrapper/: gradle-wrapper.properties
ios/Moodlight/: ContentView.swift  DataManager.swift  Info.plist  MoodlightApp.swift
ios/Moodlight.xcodeproj/: project.pbxproj
ios/Moodlight.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/: Package.resolved
ios/Moodlight.xcodeproj/xcshareddata/xcschemes/: Moodlight.xcscheme
ios/MoodlightTests/: MoodlightTests.swift
ios/MoodlightUITests/: MoodlightUITests.swift  MoodlightUITestsLaunchTests.swift
moodlight-rs/: Cargo.toml
moodlight-rs/src/: main.rs
