[package]
name = "moodlight-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.16", features = ["derive"] }

[dependencies.dittolive-ditto]
version = "1.1.10"

[dependencies.pyo3]
version = "0.14.2"
features = ["auto-initialize"]
